# BANOS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  SETUP.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
data/dataset_human_vs_human/: README.md
data/dataset_human_vs_human/Recording_1/: humanAnnotation_1.csv  humanAnnotation_2.csv
data/dataset_human_vs_human/Recording_10/: humanAnnotation_1.csv  humanAnnotation_2.csv
data/dataset_human_vs_human/Recording_2/: humanAnnotation_1.csv  humanAnnotation_2.csv
data/dataset_human_vs_human/Recording_3/: humanAnnotation_1.csv  humanAnnotation_2.csv
data/dataset_human_vs_human/Recording_4/: humanAnnotation_1.csv  humanAnnotation_2.csv
data/dataset_human_vs_human/Recording_5/: humanAnnotation_1.csv  humanAnnotation_2.csv
demo/: quickstart.m  quickstart.py  tutorial_calms21_task1.ipynb  tutorial_matlab.m  tutorial_python.ipynb
demo/models/: task1_seed_42_model.h5
example/: example_banos.m  example_banos.py
example/Dataset/: Readme.txt
matlab/BANOS/: BANOS_score.m  BANOSaggregateMetrics.m  BANOScalculateBANOSForEachFile.m  BANOScalculateIC.m  BANOScalculatePrecisionRecallF1.m  BANOScalculateSO.m  BANOScalculateTP.m  BANOScalculateTiou.m  BANOScalculateTpFpFn.m  BANOScomputeBehaviorMetrics.m  BANOScountSwitchesWithinBout.m  BANOSdropNonLogicalColumns.m  BANOSidentifyBouts.m  BANOSisLogicalColumn.m  BANOSmatchHeaders.m  BANOSoverlaps.m  BANOSpreprocessData.m  Contents.m  setup.m
reports/: fixture_comparison.html  test_report.html
scripts/: create_tutorial_notebook.py
src/banos/: __init__.py  pipeline.py
src/banos/core/: __init__.py  matching.py  (+2 more)
tests/: conftest.py  test_comparison_report.py  test_matching.py  test_metrics.py  test_parity.py  test_pipeline.py  test_preprocessing.py  test_regression.py
tests/fixtures/: compare_fixtures.py  golden_matlab_v020.json  golden_python_v015.json  golden_python_v020.json
(+31 files in other folders)
